[gd_scene load_steps=13 format=2]

[ext_resource path="res://entities/entity_mechanism/entity_mechanism.gd" type="Script" id=1]
[ext_resource path="res://libs/nodes/2d/gt_grouped_area_2d/gt_trigger_area_2d/gt_hurtbox_2d/gt_hurtbox_2d.gd" type="Script" id=2]
[ext_resource path="res://entities/entity_mechanism/assets/mechanisms.png" type="Texture" id=3]
[ext_resource path="res://libs/nodes/2d/gt_grouped_area_2d/gt_trigger_area_2d/gt_trigger_area_2d.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 8, 8 )

[sub_resource type="Animation" id=4]
resource_name = "button"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("DamageHurtbox")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "enable_all_shapes"
} ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("WeightPresence")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "disable_all_shapes"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("graphics/main:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}

[sub_resource type="Animation" id=5]
resource_name = "iron_door"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("DamageHurtbox")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "disable_all_shapes"
} ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("WeightPresence")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "disable_all_shapes"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("graphics/main:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=6]
resource_name = "lever"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("DamageHurtbox")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "enable_all_shapes"
} ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("WeightPresence")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "disable_all_shapes"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("graphics/main:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}

[sub_resource type="Animation" id=7]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("DamageHurtbox")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "disable_all_shapes"
} ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("WeightPresence")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "enable_all_shapes"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("graphics/main:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("WeightPresence/CollisionShape2D:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1.33, 1.33 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "pressure_plate"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("DamageHurtbox")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "disable_all_shapes"
} ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("WeightPresence")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "enable_all_shapes"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("graphics/main:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("WeightPresence/CollisionShape2D:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.75, 0.75 ) ]
}

[node name="Mechanism" type="Node2D"]
script = ExtResource( 1 )
entity_type = 8

[node name="Timers" type="Node" parent="."]

[node name="ButtonDeactivateTimer" type="Timer" parent="Timers"]
one_shot = true

[node name="CooldownTimer" type="Timer" parent="Timers"]
wait_time = 0.05
one_shot = true

[node name="Body" type="StaticBody2D" parent="."]
collision_layer = 2
collision_mask = 0
__meta__ = {
"_edit_lock_": true
}

[node name="graphics" type="Node2D" parent="Body"]
__meta__ = {
"_edit_lock_": true
}

[node name="main" type="Sprite" parent="Body/graphics"]
texture = ExtResource( 3 )
hframes = 5
vframes = 2
frame = 2
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body"]
visible = false
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="DamageHurtbox" type="Area2D" parent="Body" groups=[
"entity_mechanism_damage_hurtbox",
]]
visible = false
collision_layer = 16
collision_mask = 16
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}
_entity_path = NodePath("../..")
_body_path = NodePath("..")
collidable_groups = [ "entity_explosion_damage_hitbox" ]

[node name="CollisionShape" type="CollisionShape2D" parent="Body/DamageHurtbox"]
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="WeightPresence" type="Area2D" parent="Body" groups=[
"entity_mechanism_presence_trigger",
]]
visible = false
collision_layer = 8
collision_mask = 8
script = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}
_entity_path = NodePath("../..")
_body_path = NodePath("..")
collidable_groups = [ "entity_player_mechanism_presence_trigger", "entity_block_mechanism_presence_trigger" ]
trigger_type = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body/WeightPresence"]
scale = Vector2( 1.33, 1.33 )
shape = SubResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Body"]
anims/button = SubResource( 4 )
anims/iron_door = SubResource( 5 )
anims/lever = SubResource( 6 )
anims/normal_door = SubResource( 7 )
anims/pressure_plate = SubResource( 8 )

[connection signal="timeout" from="Timers/ButtonDeactivateTimer" to="." method="_on_Timer_timeout"]
[connection signal="effect" from="Body/DamageHurtbox" to="." method="_on_DamageHurtbox_effect"]
[connection signal="grouped_area_entered" from="Body/WeightPresence" to="." method="_on_WeightPresence_grouped_area_entered"]
[connection signal="grouped_area_exited" from="Body/WeightPresence" to="." method="_on_WeightPresence_grouped_area_exited"]
